# tec-ma2003b-public

./: .gitignore  .gitmodules  AUTHENTICITY_REPORT.md  CHANGELOG.md  CLAUDE.md  KNOWLEDGE_README.md  README.md  SHARED_COLORS_SUMMARY.md  TXTTOQTI_UPDATE_SUMMARY.md  ai_manifest.json  download_knowledge.py  ma2003b.code-workspace  pyproject.toml  requirements.txt  setup.py  setup_knowledge.sh
.claude/: CLAUDE.md
.context/: AI_MANIFEST.md  TODO.md
.github/: copilot-instructions.md
.github/chatmodes/: content-creator.chatmode.md  reviewer.chatmode.md
.github/instructions/: avoid-unicode-math.instructions.md  i-hate-emojis.instructions.md
.github/prompts/: commit.prompt.md  release-new-version.prompt.md  tag-new-version.prompt.md  update-documentation.prompt.md  update-version.prompt.md
.github/releases/: v0.1.2.md
.github/scripts/: README.md  update_version.sh
.guidelines/: MA2003B - Sintético.md  MA2003B_GUIDELINES.md  course_timeline.md
1_Regression_Analysis/1.1_Simple_Linear_Regression/: instructions.txt  simple_linear_regression.tex  simple_linear_regression_practice.py  simple_linear_regression_report.txt
1_Regression_Analysis/1.2_ANOVA_Confidence_Intervals/: anova_confidence_intervals.tex  anova_confidence_intervals_report.txt
1_Regression_Analysis/1.3_Residual_Analysis_Normality/: residual_analysis_normality.tex  residual_analysis_report.txt
1_Regression_Analysis/1.4_Forward_Selection/: forward_selection.tex  forward_selection_practice.py  forward_selection_report.txt
1_Regression_Analysis/1.5_Backward_Selection/: backward_selection.tex  backward_selection_practice.py  backward_selection_report.txt
beamers/1_Regression_Analysis/1.2_ANOVA_Confidence_Intervals/: README.md
beamers/1_Regression_Analysis/1.4_Forward_Selection/: README.md
beamers/1_Regression_Analysis/1.5_Backward_Selection/: README.md
beamers/4_Factor_Analysis/4.1_Objectives_of_factor_analysis/: README.md  objectives_factor_analysis_report.txt
beamers/4_Factor_Analysis/4.2_Factor_analysis_equations/: factor_analysis_equations_report.txt
beamers/4_Factor_Analysis/4.6_Coding_and_commercial_software/: coding_software_report.txt
beamers/4_Factor_Analysis/lesson/: factor_analysis.tex
beamers/4_Factor_Analysis/notes/: factor_analysis_notes.tex
beamers/5_Discriminant_Analysis/: README.md
beamers/5_Discriminant_Analysis/5.3_Basic_discrimination/: basic_discrimination_report.txt
beamers/5_Discriminant_Analysis/5.5_Canonical_discriminant_functions/: README.md
beamers/themes/: beamercolorthemema2003b.sty  beamerthemema2003b.sty
contents/1_Regression_Analysis/: README.md
contents/1_Regression_Analysis/1.1_Simple_Linear_Regression/: README.md
contents/1_Regression_Analysis/1.2_ANOVA_Confidence_Intervals/: anova_confidence_intervals_practice.py
contents/1_Regression_Analysis/1.3_Residual_Analysis_Normality/: README.md
contents/4_Factor_Analysis/: README.md
contents/4_Factor_Analysis/4.1_Objectives_of_factor_analysis/: README.md  objectives_factor_analysis_report.txt
contents/5_Discriminant_Analysis/: README.md
documentacion/: plan-horas-asignadas.md  temario.txt
documentation/: factor_analysis_outline.md
evaluations/4_Factor_Analysis/: README.md
guidelines/: MA2003B - Analítico.md  course_outline.txt
knowledge/: README.md  requirements.txt
notes/: lecture_notes.tex
scripts/: extract_pdf_text.py  pull_data.py
utils/: __init__.py  logger.py  test_logger.py
(+74 files in other folders)
