[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ma2003b-course"
version = "1.7.0"
description = "MA2003B course materials and utilities"
readme = "README.md"
authors = [ { name = "julihocc" } ]
dependencies = [
    "factor-analyzer>=0.5.1",
    "gdown>=5.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pdfminer-six>=20250506",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "txttoqti",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
txttoqti = { git = "https://github.com/julihocc/txttoqti.git", rev = "v0.8.0" }
